# midi2audio

./: .gitmodules  Cargo.toml  README.md  circuit.sp  midiguitar.scad
fastf0nls/: CMakeLists.txt  Cargo.toml  build.rs  fastf0nls.c  lookup.h
fastf0nls/src/: lib.rs
midi2audio/: Cargo.toml
midi2audio/src/: main.rs
midiguitar/: Cargo.toml  memory.x
midiguitar/.cargo/: config.toml
midiguitar/src/: main.rs
schematic/: midiguitarpcb.kicad_pcb  midiguitarpcb.kicad_prl  midiguitarpcb.kicad_pro  midiguitarpcb.kicad_sch
src/: .mxproject  CMakeLists.txt  STM32H743ZITx_FLASH.ld  install.sh  main.rs  midi.rs  midiguitar.ioc
src/Inc/: stm32h7xx_hal_conf.h  stm32h7xx_it.h  tusb_config.h  usbd_conf.h
src/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  usb_device.c  usbd_conf.c  usbd_desc.c
src/cmake/stm32cubemx/: CMakeLists.txt
src/fastf0nls/: CMakeLists.txt  audio2midi.c  lookup.c  lookup.h  midiguitar.c  midiguitar.h
synth/: Cargo.toml
synth/fastf0nls/libfastf0nls/: fastf0nls.c  fastf0nls.h
synth/src/: lib.rs  lookup.rs  main.rs
