cmake_minimum_required(VERSION 3.14)
project(fastf0nls)
set(CMSISCORE ${CMAKE_CURRENT_SOURCE_DIR}/CMSIS_5/CMSIS/Core)
set(DISABLEFLOAT16 ON)
add_compile_options(-Ofast)
add_subdirectory(CMSIS-DSP/Source)
add_library(fastf0nls STATIC fastf0nls.c)
target_link_libraries(fastf0nls PUBLIC CMSISDSP)
install(TARGETS fastf0nls CMSISDSP DESTINATION .)
