[package]
authors = ["Nicholas Grasevski <grasevski@gmail.com>"]
name = "midiguitar"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m-rtic = "1.1"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }
#panic-halt = "0.2.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
synth = { path = "../synth" }
defmt = "0.3"
defmt-rtt = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
strip = true
codegen-units = 1
lto = true
opt-level = 's'

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
