[package]
name = "synth"
version = "0.1.0"
authors = ["Nicholas Grasevski <grasevski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.7", default-features = false }
fastf0nls = { path = "../fastf0nls" }
micromath = "2.1"
static_assertions = "1.1"
wmidi = { version = "4.0", default-features = false }

[target.x86_64-unknown-linux-musl.dependencies]
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
proptest = "1.0.0"
